--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -2,36 +2,44 @@
     --main-green-color: rgba(9, 82, 9, 0.829);
     --title-font-family: 'Bebas Neue', cursive;
 }
+
+html {
+    background: url(images/ogdrawnwood.png);
+    background-position: center;
+}
+
 #navbar {
-  background-color: var(--main-green-color);
-  position: fixed; /* Make it stick/fixed */
-  top: 0; /* Stay on top */
-  width: 98.89%; /* Full width */
-  transition: top 0.3s; /* Transition effect when sliding down (and up) */
-  z-index: 9;
-  margin-left: 0px
+    background-color: var(--main-green-color);
+    position: fixed; /* Make it stick/fixed */
+    top: 0; /* Stay on top */
+    width: 98.9%; /* Full width */
+    transition: top 0.3s; /* Transition effect when sliding down (and up) */
+    z-index: 9;
+    margin-right: 1px
 }
 
 /* Style the navbar links */
 #navbar a {
-  float: right;
-  display: block;
-  color: rgba(255,255,255,0.829);
-  text-align: center;
-  padding: 15px;
-  text-decoration: none;
-  font-family: var(--title-font-family);
+    float: right;
+    display: block;
+    color: rgba(255,255,255,0.829);
+    text-align: center;
+    padding: 9.8px;
+    text-decoration: none;
+    font-family: var(--title-font-family);
+    font-size: 25px;
+    margin-right: 10px;
 }
 
 #navbar a:hover {
-  background-color: #ddd;
-  color: rgba(9, 82, 9);
+    background-color: #ddd;
+    color: rgba(9, 82, 9);
 }
 #hero-image {
     background: url("/images/banana_transparent.png");
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 48.4px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 48.8px;
     height: 700px;
     background-position: center;
     background-repeat: no-repeat;
@@ -52,19 +60,6 @@
     font-size: 175px;
     -webkit-text-stroke: 3px var(--main-green-color);
     overflow: hidden
-}
-
-html {
-    background: url(images/ogdrawnwood.png);
-    background-position: center;
-}
-
-#content {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-  font-family: 'Roboto', sans-serif;
-  
 }
 
 #button-container {
@@ -104,4 +99,52 @@ html {
     font-size: 40px;
     margin: 3px 1px;
     cursor: pointer;
+}
+
+#content {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.about-title-container {
+    position: relative;
+    text-align: left;
+    margin-left: 50px;
+    top: 100px;
+}
+.about-title-text {
+    position: absolute;
+    top: 7.5px;
+    left: 20px;
+    margin-right: auto;
+    font-family: var(--title-font-family);
+    color: white;
+    font-style: bold;
+    font-size: 120px;
+    -webkit-text-stroke: 2px var(--main-green-color);
+}
+
+.about-image-container {
+    position: relative;
+    margin-left: 50px;
+    background-color: rgba(151, 191, 128, 0.877);
+    padding: 50px;
+    width: 300px;
+    top: 130px;
+}
+
+.about-text-container {
+    position: relative;
+    margin-left: 650px;
+    background-color: var(--main-green-color);
+    border: 15px solid rgba(151, 191, 128, 0.877);
+    padding: 50px;
+    width: 600px;
+    top: -530px;
+}
+
+#about-text {
+	font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    color: rgb(253, 253, 253);
 }
