--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -156,3 +156,90 @@ html {
     font-size: 20px;
     color: rgba(9, 82, 9);
 }
+
+.proj-title-container {
+    padding-top: 300px;
+    position: relative;
+    text-align: left;
+    margin-left: 50px;
+    top: -300px;
+}
+.proj-title-text {
+    position: absolute;
+    top: 300px;
+    left: 20px;
+    margin-right: auto;
+    font-family: var(--title-font-family);
+    color: white;
+    font-style: bold;
+    font-size: 120px;
+    -webkit-text-stroke: 2px var(--main-green-color);
+}
+
+.proj-1-container {
+    position: relative;
+    text-align: center;
+    margin-left: 20%;
+    background-color: rgba(255, 255, 255, 0.25);
+    background-image: linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877)),
+                linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877)),
+                linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877)),
+                linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877));
+    background-repeat: no-repeat;
+    background-size: 10px 5px;
+    background-position: top left, top right, bottom left, bottom right;
+    border: solid rgba(151, 191, 128, 0.877);
+    border-width: 0 5px;
+    padding: 50px;
+    width: 300px;
+    top: -250px;
+    height: auto;
+}
+
+.proj-1-container:hover {
+    position: relative;
+    text-align: center;
+    margin-left: 20%;
+    background-color: rgba(151, 191, 128, 0.877);
+    padding: 50px;
+    width: 300px;
+    top: -250px;
+    height: auto;
+}
+
+.proj-2-container {
+    position: relative;
+    text-align: center;
+    margin-left: 50%;
+    background-image: linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877)),
+            linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877)),
+            linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877)),
+            linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877));
+    background-color: rgba(255, 255, 255, 0.25);
+    background-repeat: no-repeat;
+    background-size: 10px 5px;
+    background-position: top left, top right, bottom left, bottom right;
+    border: solid rgba(151, 191, 128, 0.877);
+    border-width: 0 5px;
+    padding: 50px;
+    width: 300px;
+    top: -675px;
+    height: auto;
+}
+
+.proj-2-container:hover {
+    position: relative;
+    text-align: center;
+    margin-left: 50%;
+    background-color: rgba(151, 191, 128, 0.877);
+    padding: 50px;
+    width: 300px;
+    top: -675px;
+    height: auto;
+}
+
+#proj-text {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    color: rgba(9, 82, 9);
+}
