--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -310,6 +310,26 @@ html {
     color: rgba(9, 82, 9);
 }
 
+.comment-title-container {
+    padding-top: 300px;
+    position: relative;
+    text-align: left;
+    margin-left: 50px;
+    top: -300px;
+}
+
+.comment-title-text {
+    position: absolute;
+    top: 300px;
+    left: 20px;
+    margin-right: auto;
+    font-family: var(--title-font-family);
+    color: white;
+    font-style: bold;
+    font-size: 120px;
+    -webkit-text-stroke: 2px var(--main-green-color);
+}
+
 #comments-container {
     list-style-type: none;
 }
