--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -138,7 +138,7 @@ html {
 .about-text-container {
     position: relative;
     margin-left: 650px;
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: rgba(255, 255, 255, 0.35);
     padding: 30px;
     width: 600px;
     top: -530px;
@@ -213,7 +213,7 @@ html {
             linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877)),
             linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877)),
             linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877));
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: rgba(255, 255, 255, 0.35);
     background-repeat: no-repeat;
     background-size: 10px 5px;
     background-position: top left, top right, bottom left, bottom right;
@@ -234,7 +234,7 @@ html {
     position: relative;
     text-align: center;
     margin-left: 20%;
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: rgba(255, 255, 255, 0.35);
     background-image: linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877)),
                 linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877)),
                 linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877)),
@@ -263,7 +263,7 @@ html {
             linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877)),
             linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877)),
             linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877));
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: rgba(255, 255, 255, 0.35);
     background-repeat: no-repeat;
     background-size: 10px 5px;
     background-position: top left, top right, bottom left, bottom right;
@@ -314,12 +314,12 @@ html {
 }
 
 .comment {
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: rgba(255, 255, 255, 0.35);
     border: solid rgba(151, 191, 128, 0.877);
     border-width: 1.5 1.5px;
     margin: 10px;
     padding: 10px;
-    width: 300px;
+    width: 400px;
     font-family: 'Montserrat', sans-serif;
     font-size: 17px;
     color: rgba(9, 82, 9);
@@ -339,7 +339,7 @@ html {
             linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877)),
             linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877)),
             linear-gradient(rgba(151, 191, 128, 0.877), rgba(151, 191, 128, 0.877));
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: rgba(255, 255, 255, 0.35);
     background-repeat: no-repeat;
     background-size: 10px 5px;
     background-position: top left, top right, bottom left, bottom right;
@@ -356,9 +356,31 @@ html {
     color: rgba(9, 82, 9);
 }
 
+.skills-title-container {
+    padding-top: -10px;
+    position: relative;
+    text-align: left;
+    margin-left: 50px;
+    padding-bottom: 30px;
+}
+
+.skills-title-text {
+    top: -10px;
+    position: absolute;
+    left: 20px;
+    margin-right: auto;
+    font-family: var(--title-font-family);
+    color: white;
+    font-style: bold;
+    font-size: 120px;
+    -webkit-text-stroke: 2px var(--main-green-color);
+    padding-bottom: 30px;
+}
+
 #chart-container {
     padding: 100px;
     padding-bottom: 20px;
+    margin-left: 15%;
 }
 
 .button2 {
@@ -377,10 +399,13 @@ html {
 
 #toggle-button {
     padding-left: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 200px;
+    margin-left: 15%;
 }
 
 #map {
-    width: 100%;
-    height: 500px;
+    position: absolute;
+    width: 700px;
+    height: 700px;
+    margin-left: 20%;
 }
