Adds feature for users to comment with location, displays marker on the map and an info window with their name

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -404,8 +404,9 @@ html {
 }
 
 #map {
+    margin-top: 70px;
     position: absolute;
-    width: 700px;
+    width: 1000px;
     height: 700px;
     margin-left: 20%;
 }
